[package]
name = "blog_actix"
version = "0.1.0"
authors = ["Tuhin Nair <tuhinnair444@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
futures = "0.3.5"
env_logger = "0.7.1"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
diesel = {version = "", features = ["sqlite", "r2d2"]}
dotenv = "0.15.0"
actix-rt = "1.0"